# swipe_button_widget

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/mahmoudsalah37/swipe_button_widget/: SwipeButtonWidgetPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: swipe_button_widget.podspec
ios/Classes/: SwiftSwipeButtonWidgetPlugin.swift  SwipeButtonWidgetPlugin.h  SwipeButtonWidgetPlugin.m
lib/: swipe_button_widget.dart  swipe_button_widget_web.dart
macos/: swipe_button_widget.podspec
macos/Classes/: SwipeButtonWidgetPlugin.swift
test/: swipe_button_widget_test.dart
windows/: CMakeLists.txt  swipe_button_widget_plugin.cpp
windows/include/swipe_button_widget/: swipe_button_widget_plugin.h
(+1 files in other folders)
